--- a/client/src/styles/TodoApp.css
+++ b/client/src/styles/TodoApp.css
@@ -23,7 +23,9 @@
 }
 
 .app-input{
-    padding: 10px 40px;
+    height: 50px;
+    padding: 10px;
+    font-size: 14px;
     box-sizing: border-box;
     width: 50%;
 }
