--- a/client/src/styles/Todos.css
+++ b/client/src/styles/Todos.css
@@ -6,7 +6,7 @@
 .todoList-body{
     display: grid;
     grid-template-columns: 70% 80px 80px;
-    
+    justify-content: center;
     
 }
 .todoList-body li{
@@ -42,6 +42,7 @@ text-decoration: none;
 
 @media (max-width: 700px){
     .Todos{
-        width: 80%;
+        width: 100%;
+        margin: 0;
     }
 }
