--- a/client/src/styles/TodoApp.css
+++ b/client/src/styles/TodoApp.css
@@ -21,7 +21,18 @@
     position: relative;
     font-size: 1em;
 }
-
+.appBody-quote-div{
+    text-align: center;
+    padding: 30px;
+    position: absolute;
+    bottom:0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+#mug_icon{
+    color:#017349;
+}
 .app-input{
     height: 50px;
     padding: 10px;
