--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,43 +1,18 @@
 header{
     width: 100%;
-    height: 10%;
-    top:0;   
-    display: fixed;
     background-color: #04BFBF;
     padding: 15px;
+    display: flex;
+    justify-content: space-between;
 }
-.home{
-    float: left;
-    padding-left: 20px;
-    color: white;
-
-}
-
-header a{
-    float: right;
-    text-decoration: none;
-    color: white;
-    
-}
-#googleBtn{
-    padding-top: 10px;
-    padding-right: 10px;
-}
-
-header::after{
-    content: '';
-    display: table;
-    clear: both;   
-}
-
-html,body { 
-    
+html,body {     
     height: 100%;
     margin: 0px; 
     padding: 0px; 
     font-family: 'Raleway', sans-serif;
+}
 
-    }
-.logoutButton{
-    padding-right: 20px;
+.header-link{
+    text-decoration: none;
+    color: white;
 }
