--- a/client/src/styles/TodoApp.css
+++ b/client/src/styles/TodoApp.css
@@ -4,6 +4,22 @@
     width: 50%;
     text-align: center;
 }
+.appBody{    
+    height: 95vh;
+}
+.appBody-titles{
+    text-align: center;
+}
+
+.appBody-content{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.appBody-content h4{
+    text-align: center;
+}
 .app-btn{
     width: 100px;
     height: 50px;
@@ -18,20 +34,17 @@
     background-color:#04BFBF;
     box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
     text-align:center;
-    position: relative;
     font-size: 1em;
+    outline: none;
+}
+.app-btn:hover:focus{
+    outline: none;
 }
 .appBody-quote-div{
     text-align: center;
-    padding: 30px;
-    position: absolute;
-    bottom:0;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
 }
 #mug_icon{
-    color:#017349;
+    color:rgba(4, 191, 191, 0.582);
 }
 .app-input{
     height: 50px;
