styling of update button

--- a/client/src/styles/Todos.css
+++ b/client/src/styles/Todos.css
@@ -52,8 +52,9 @@ p{
 }
 
 .updateBtn{
-    border:none;
+    border:3px dashed #04BFBF;
     outline: none;
+    padding: 10px;
 }
 
 .doneItem{
@@ -74,6 +75,14 @@ text-decoration: line-through;
     justify-content: space-between;    
     width: 200px;
     margin-top: 6px;
+}
+.update-input{
+    height: 50px;
+    padding: 10px;
+    font-size: 14px;
+    box-sizing: border-box;
+    margin: 10px;
+    width: 100%;
 }
 @media (max-width: 800px){
     .Todos{
